--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </video>   
         <!--Nav bar starts here-->  
          
-        <div class="backdrop-blur p-4 text-white">                   
+        <div class="backdrop-blur-sm p-4 text-white">                   
             <nav class="flex justify-between">
                 <h2 class="text-white items-center text-2xl  ">Juliet</h2>
                 <ul class="justify-end flex  space-x-6">
