--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <!--End of the Nav bar-->
             <!--Beginning of the body content-->
 
-        <div class="w-10/12 backdrop-blur mt-10 mx-auto text-white justify-center p-7 flex items-center"><p class="text-center">Unlocking Earth's secrets through science and exploration, Bisola Juliet Afeniforo is dedicated to geological research, resource discovery, and environmental sustainability. With expertise in geological mapping and mineral assessment, she contributes to responsible resource management and advances in geoscience.
+        <div class="w-10/12 backdrop-blur-sm mt-10 mx-auto text-white justify-center p-7 flex items-center"><p class="text-center">Unlocking Earth's secrets through science and exploration, Bisola Juliet Afeniforo is dedicated to geological research, resource discovery, and environmental sustainability. With expertise in geological mapping and mineral assessment, she contributes to responsible resource management and advances in geoscience.
         </p>
         </div>
         <!--End of the body content-->
@@ -40,7 +40,7 @@
         <!--End of the button--> 
         
         <!--footer tag-->
-        <footer class="backdrop-blur mt-10 py-6 text-white">
+        <footer class="backdrop-blur-sm mt-10 py-6 text-white">
             <div class=" px-4 space-x-6 flex justify-center items-center"><i class= "fab fa-facebook hover: text-blue-600 transition"></i>
                 <i class= "fab fa-instagram hover: text-pink-500 transition"></i>
                 <i class= "fab fa-x-twitter hover: text-white transition"></i>
