--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <!--End of the button--> 
         
         <!--footer tag-->
-        <footer class="backdrop-blur mb-10 py-6 text-white">
+        <footer class="backdrop-blur mt-10 py-6 text-white">
             <div class=" px-4 space-x-6 flex justify-center items-center"><p class="text-sm">&copy 2025 Bisola Juliet Afeniforo</p><i class= "fab fa-facebook hover: text-blue-600 transition"></i>
                 <i class= "fab fa-instagram hover: text-pink-500 transition"></i>
                 <i class= "fab fa-x-twitter hover: text-white transition"></i>
